--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
             <h2>Sunny Play</h2>
 
-            <p>Our center is located in beautiful Miami, and it&rsquo;s currently 84°F at our pet playground.</p>
+            <p>Our center is located in beautiful Bangor, and it&rsquo;s currently <span
+                id="temperature-output"></span>°F at our pet playground.</p>
           </div>
 
           <div class="intro-feature">
@@ -192,6 +193,8 @@
   <footer class="site-footer">
     <p>&copy; 2023 Fake Adoption Center. All rights reserved.</p>
   </footer>
+
+  <script src="main.js"></script>
 
 </body>
 
